Bug 153684 - "Check uppercase words" option is ignored if the word is followed by a period
Summary: "Check uppercase words" option is ignored if the word is followed by a period
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0 target:25.8.0.2 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Spell-Checking
  Show dependency treegraph
 
Reported: 2023-02-17 09:23 UTC by ajperez81
Modified: 2025-08-18 16:00 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ajperez81 2023-02-17 09:23:19 UTC
Description:
LibreOffice 7.5.0.3, with the "Check uppercase words" option disabled.

If I type an uppercase word, such as "ACME" or "ASDJHFJDF", the spell-checker ignores it, as it should. However, if the word is followed by a period, as in "ASDASDASD.", it highlights it as misspelled. It only happens with periods, not with commas or colons.

The behavior has changed since 7.3.4.2, which behave properly and ignored uppercase words regardless of what's after them.

Steps to Reproduce:
1. Open Writer with a new document.
2. Options > Language settings > Writing aids > disable the "Check uppercase words" option, and apply.
3. Write "This is a AJKAJK AJKAJK. test".

Actual Results:
The word "AJKAJK" isn't highlighted as misspelled, but "AJKAJK." is.

Expected Results:
Neither should be highlighted, it's the same uppercase word. The period shouldn't be considered part of the word.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: threaded
Comment 1 Xisco Faulí 2023-02-17 10:09:30 UTC
Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 75a863ee7fea133ae6bcd010d1aac46815fa49e2
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2023-02-17 10:11:12 UTC
Not reproducible in

Version: 6.0.0.0.alpha1+
Build ID: 6eeac3539ea4cac32d126c5e24141f262eb5a4d9
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11; 
Locale: es-ES (es_ES.UTF-8); Calc: group threaded
Comment 3 Xisco Faulí 2023-02-17 10:25:11 UTC
Regression introduced by:

author	Eike Rathke <erack@redhat.com>	2022-09-12 17:14:24 +0200
committer	Eike Rathke <erack@redhat.com>	2022-09-13 10:25:17 +0200
commit ab0adac692b67fe7b63dee665607400c6a7e6c01 (patch)
tree b67f36216dcf5f06e6acd4d73cbd629a4f81b14d
parent f0f0d385b91df30d4ec42a9f727cbdbe5ce0861f (diff)
Fix everything using XCharacterClassification::getStringType() and don't use it

Bisected with: bibisect-linux64-7.5

Adding Cc: to Eike Rathke
Comment 4 Commit Notification 2025-07-15 22:51:36 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/53a9cee01759ce54c4ee50468958531a360640f9

tdf#153684 spellcheck: ignore non-case character when !IsSpellUpperCase

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-07-17 11:26:55 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/952412154a4872d0f06a60c44506278924bb9c62

tdf#153684 spellcheck: ignore non-case character when !IsSpellUpperCase

It will be available in 25.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-08-18 16:00:18 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/6b6d9c618edf8be0621829a66370b08a7d410287

tdf#153684 spellcheck: ignore non-case character when !IsSpellUpperCase

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.